2007-11-29  Paul J Stevens <paul@nfg.nl>

	* modules/dbmysql.c:
	remove silent autoreconnects in the mysql driver to prevent resetting 
	the client encoding (bug #655)
	* dbmail-mailbox.c:
	add correct From_ headers while exporting email (closes #656)

2007-11-25  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_misc.c, dbmail-mailbox.c, misc.c, misc.h:
	add dm_strtoull call that will return 0 and set errno when the string 
	conversion would result in a negative integer

2007-11-22  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_mailbox.c, dbmail-mailbox.c, imapcommands.c, 
	test-scripts/testimap.py:
	disallow negative seq-numbers

2007-11-18  Paul J Stevens <paul@nfg.nl>

	* INSTALL:
	minor pgsql update in INSTALL

2007-11-17  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_misc.c, misc.c:
	fix misunderstanding of rfc2047 encoded addresses (bug #655)

2007-11-15  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_imapd.c, check_dbmail_message.c, 
	check_dbmail_misc.c, misc.c:
	make imap_cleanup_address also handle addresslists

2007-10-29  Paul J Stevens <paul@nfg.nl>

	* debug.c:
	fix ifdef for BSDs

2007-10-27  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.7

2007-10-26  Paul J Stevens <paul@nfg.nl>

	* contrib/startup-scripts/debian/dbmail-imapd, 
	contrib/startup-scripts/debian/dbmail-lmtpd, 
	contrib/startup-scripts/debian/dbmail-pop3d:
	removed old debian scripts

2007-10-24  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_misc.c, misc.c:
	fix a mistake in the state machine used in dbmail_iconv_text_decode

2007-10-20  Paul J Stevens <paul@nfg.nl>

	* pool.h:
	decrease HARD_MAX_CHILDREN to 300 to avoid segfaults

2007-10-19  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.7-rc4
	* pool.h:
	increase HARD_MAX_CHILDREN to 1024
	* modules/authldap.c:
	small logging change in dm_ldap_mod_field
	* man/dbmail-export.8, man/dbmail-imapd.8, man/dbmail-lmtpd.8, 
	man/dbmail-pop3d.8, man/dbmail-sievecmd.8, man/dbmail-smtp.1, 